--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -25,6 +25,13 @@
 		color: #fff;
 	}
 
+	&-cast {
+		background-color: #000;
+		width: 100%;
+		height: 100%;
+		display: none;
+	}
+
 	&-content {
 		display: flex;
 		flex-direction: column;
@@ -284,7 +291,17 @@
 
 	&-controls {
 		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-columns: 1fr auto 1fr;
+
+		button {
+			padding: 4px;
+			display: flex;
+
+			::deep svg {
+				width: 24px;
+				height: 24px;
+			}
+		}
 
 		> div {
 			display: flex;
@@ -297,18 +314,17 @@
 			}
 		}
 
-		&-right {
-			justify-content: flex-end;
+		&-middle {
+			button {
+				::deep svg {
+					width: 28px;
+					height: 28px;
+				}
+			}
 		}
 
-		button {
-			padding: 4px;
-			display: flex;
-
-			::deep svg {
-				width: 24px;
-				height: 24px;
-			}
+		&-right {
+			justify-content: flex-end;
 		}
 	}
 
@@ -414,6 +430,19 @@
 		.amc-videoplayer {
 			&-seekinfo {
 				display: none;
+			}
+		}
+	}
+
+	&._casting {
+		.amc-videoplayer {
+			&-cast {
+				display: block;
+			}
+
+			&-video,
+			&-content {
+				display: none !important;
 			}
 		}
 	}
