--- a/Demo/Pages/VideoPlayerPage.razor
+++ b/Demo/Pages/VideoPlayerPage.razor
@@ -2,4 +2,12 @@
 
 <PageTitle>Blazor Video Player Component</PageTitle>
 
-<VideoPlayer ReserveAspectRatio="true" VideoUrl="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" />
+<VideoPlayer Metadata="Metadata" />
+
+@code{
+    VideoPlayerMetadata Metadata { get; set; } = new()
+    {
+        ReserveAspectRatio = true,
+        VideoUrl = "https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4"
+    };
+}
