--- a/Components/VideoPlayer/VideoPlayer.razor
+++ b/Components/VideoPlayer/VideoPlayer.razor
@@ -3,16 +3,16 @@
 
 <div class="amc-videoplayer @ClassAttributes" @ref="ComponentElement" @onmousemove="MainMouseMove" @onfullscreenchange="OnFullScreenChange" @onmousewheel="OnMouseWheel" @onclick="OnComponentClick">
 
-    @if (!Metadata.HasError)
+    <div class="amc-videoplayer-video">
+        <video src="@_videoUrl" @onchange="OnVideoChange" playsinline x-webkit-airplay="deny"></video>
+    </div>
+
+    @if (Metadata.VideoState != VideoStates.Error)
     {
         @if (Metadata.IsCasting || Metadata.CastingInitialized)
         {
             <VideoPlayerCast @ref="VideoPlayerCast" Player="this" Metadata="Metadata" />
         }
-
-        <div class="amc-videoplayer-video">
-            <video src="@_videoUrl" @onchange="OnVideoChange" playsinline x-webkit-airplay="deny"></video>
-        </div>
 
         <div class="amc-videoplayer-content">
 
@@ -50,7 +50,7 @@
                             <div class="amc-videoplayer-sidebar-menu">
                                 <button class="amc-videoplayer-menu-info" @onclick="ShowVideoInfo">
                                     Video Info
-                                    <div class="amc-videoplayer-settings-subvalue">@Metadata.Status</div>
+                                    <div class="amc-videoplayer-settings-subvalue">@Metadata.PlayingState</div>
                                 </button>
                                 <button class="amc-videoplayer-menu-playbackspeed" @onclick="ShowVideoPlaybackSpeedOptions">
                                     Playback speed
@@ -150,7 +150,7 @@
 
                         @* Status *@
                         <div class="amc-videoplayer-status">
-                            @if (Metadata.Status == VideoPlayerMetadata.VideoStatus.Buffering || Metadata.Status == VideoPlayerMetadata.VideoStatus.Streaming)
+                            @if (Metadata.PlayingState == PlayingStates.Buffering)
                             {
                                 <AngryMonkey.Cloud.Components.Icons.Loading />
                             }
