--- a/Components/VideoPlayer/VideoPlayer.razor.css
+++ b/Components/VideoPlayer/VideoPlayer.razor.css
@@ -48,6 +48,10 @@
   border-radius: var(--amc-videoplayer-roundedCorder);
   background-color: rgba(255, 255, 255, 0.2);
 }
+::deep .amc-svg-stroke._corner-rounded {
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
 .amc-videoplayer {
   user-select: none;
   font-family: 'Segoe UI';
@@ -104,9 +108,6 @@
   color: #fff;
 }
 .amc-videoplayer-cast {
-  background-color: #000;
-  width: 100%;
-  height: 100%;
   display: none;
 }
 .amc-videoplayer-content {
@@ -415,7 +416,36 @@
   display: none;
 }
 .amc-videoplayer._casting .amc-videoplayer-cast {
-  display: block;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+.amc-videoplayer._casting .amc-videoplayer-cast-title {
+  font-size: 1.4rem;
+  opacity: 0.8;
+}
+.amc-videoplayer._casting .amc-videoplayer-cast-status {
+  opacity: 0.8;
+  margin-top: 20px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  padding: 10px;
+}
+.amc-videoplayer._casting .amc-videoplayer-cast-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.amc-videoplayer._casting .amc-videoplayer-cast-icon {
+  opacity: 0.8;
+}
+.amc-videoplayer._casting .amc-videoplayer-cast-icon ::deep svg {
+  width: 48px;
+  height: 48px;
 }
 .amc-videoplayer._casting .amc-videoplayer-video,
 .amc-videoplayer._casting .amc-videoplayer-content {
