--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -11,6 +11,14 @@
 	}
 }
 
+::deep .amc-svg-stroke {
+
+	&._corner-rounded {
+		stroke-linecap: round;
+		stroke-linejoin: round;
+	}
+}
+
 .amc-videoplayer {
 	.ComponentsDefault();
 	--amc-videoplayer-roundedCorder: 3px;
@@ -26,9 +34,6 @@
 	}
 
 	&-cast {
-		background-color: #000;
-		width: 100%;
-		height: 100%;
 		display: none;
 	}
 
@@ -67,7 +72,6 @@
 				align-self: flex-end;
 				width: 100%;
 				max-width: 150px;
-
 
 				.amc-svg-fill {
 					fill: #fff;
@@ -437,7 +441,41 @@
 	&._casting {
 		.amc-videoplayer {
 			&-cast {
-				display: block;
+				display: grid;
+				grid-template-rows: 1fr auto;
+				background-color: #000;
+				width: 100%;
+				height: 100%;
+				text-align: center;
+
+				&-title {
+					font-size: 1.4rem;
+					opacity: .8;
+				}
+
+				&-status {
+					opacity: .8;
+					margin-top: 20px;
+					border: 1px solid #fff;
+					border-radius: 5px;
+					padding: 10px;
+				}
+
+				&-info {
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					justify-content: center;
+				}
+
+				&-icon {
+					opacity: .8;
+
+					::deep svg {
+						width: 48px;
+						height: 48px;
+					}
+				}
 			}
 
 			&-video,
