Cors video added

--- a/ServerDemo/Pages/VideoPlayerPage.razor
+++ b/ServerDemo/Pages/VideoPlayerPage.razor
@@ -56,6 +56,7 @@
         new(){ Title = "Empty Url", Link = null},
         new(){ Title = "A Long Title for Live Stream live for testing", Link = "https://stmv1.cnarlatam.com/cineinfantil/cineinfantil/playlist.m3u8"},
         new(){ Title = "Mayadeen", Link = "https://mdnlv.cdn.octivid.com/almdn/smil:mpegts.stream.smil/playlist.m3u8"},
+        new(){ Title = "CORS Video", Link = "https://live.3cd.io/v1/broadcast/mtv/playlist.m3u8"},
         new(){ Title = "Blue Moon Trailer Url", Link = "https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4"},
         new(){ Title = "Coverbox", Link = "https://cbxinfo-staging.azurewebsites.net/video/coverbox-platform.mp4"},
         new(){ Title = "Live Stream Not Working", Link = "http://istream.binarywaves.com:8081/hls/arabica/playlist.m3u8"},
