VidePlayer: controls enable property added

--- a/ServerDemo/Pages/VideoPlayerPage.razor
+++ b/ServerDemo/Pages/VideoPlayerPage.razor
@@ -70,7 +70,7 @@
             ReserveAspectRatio = true,
             Autoplay = true,
             Title = Videos.First().Title,
-            VideoUrl = Videos.First().Link,
+            VideoUrl = Videos.First().Link
         };
 
     private string? ErrorMessage { get; set; }
