move from isolated JS to added script

--- a/Components/ProgressBar/ProgressBar.razor
+++ b/Components/ProgressBar/ProgressBar.razor
@@ -1,5 +1,5 @@
 ﻿@namespace AngryMonkey.Cloud.Components
-@inject IJSRuntime jsRuntime
+@inject IJSRuntime JS
 
 <div draggable class="amc-progressbar _@Style.ToString().ToLower()" @ref="ComponentElement" @onmousedown="OnComponentMouseDown" @ontouchstart="OnComponentTouchStart">
 
