--- a/Components/VideoPlayer/VideoPlayerCast.razor
+++ b/Components/VideoPlayer/VideoPlayerCast.razor
@@ -1,5 +1,5 @@
 ﻿@namespace AngryMonkey.Cloud.Components
-@inject IJSRuntime jsRuntime
+@inject IJSRuntime JS
 
 <div @ref="ComponentElement" class="amc-videoplayer-cast">
 
