--- a/ServerDemo/Pages/_Layout.cshtml
+++ b/ServerDemo/Pages/_Layout.cshtml
@@ -9,6 +9,7 @@
 <html lang="en">
 <head>
     <component type="typeof(CloudHeadInit)" param-CloudPage="cloudPage" render-mode="Static" />
+    <script src="./_content/AngryMonkey.Cloud.Components/js/amc-components.min.js"></script>
 </head>
 <body>
     @RenderBody()
