--- a/ServerDemo/Shared/Components.razor
+++ b/ServerDemo/Shared/Components.razor
@@ -8,5 +8,6 @@
         <a href="/dialog">Dialog</a>
         <a href="/dockscrolling">Dock Scrolling</a>
         <a href="/icons">Icons</a>
+        <a href="/switch">Switch</a>
     </div>
 </div>
